--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_screenutil: ^0.5.1
   url_launcher: ^5.0.1
   flutter_easyrefresh: ^1.2.7
+  flutter_staggered_grid_view: ^0.2.7
 
 dev_dependencies:
   flutter_test:
