--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   url_launcher: ^5.0.1
   flutter_easyrefresh: ^1.2.7
   flutter_staggered_grid_view: ^0.2.7
+  flutter_bloc: ^0.7.1
 
 dev_dependencies:
   flutter_test:
