--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_easyrefresh: ^1.2.7
   flutter_staggered_grid_view: ^0.2.7
   flutter_bloc: ^0.7.1
+  chewie: ^0.9.6
 
 dev_dependencies:
   flutter_test:
