--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,10 @@ dependencies:
   flutter_screenutil: ^0.5.1
   url_launcher: ^5.0.1
   flutter_easyrefresh: ^1.2.7
-  flutter_staggered_grid_view: ^0.2.7
   flutter_bloc: ^0.7.1
   chewie: ^0.9.6
+  flutter_staggered_grid_view: ^0.2.7
+
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +61,8 @@ flutter:
    - images/tab/audio_active.png
 
    - images/pages/
+
+   - video.mp4
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
