--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_bloc: ^0.7.1
   chewie: ^0.9.6
   flutter_staggered_grid_view: ^0.2.7
+  audioplayers: ^0.10.1
 
 
 dev_dependencies:
